Getting closer to the end

--- a/src/app/blog/(posts)/0005/page.mdx
+++ b/src/app/blog/(posts)/0005/page.mdx
@@ -17,11 +17,11 @@ Recently, I upgraded this entire website with yet another fresh coat of paint. O
 So sit back and get your snack of choice, time for another trip back in time.
 
 > EDITORS NOTE (aka me)
-> This article has been in the work for a while now, and while I would love to try and update the old sites to newer versions of the frameworks to see how I was bad at web development previously it would take a lot longer.
+> This article has been in the work for a while now, and while I would love to try and update the old sites to newer versions of the frameworks to see how I was bad at web development previously it would take a lot longer. It's also been through much restructuring in an attempt to be more "palatable" for people who don't have ADHD like me.
 >
 > The section where I talk about bundle sizes and profiling page loading is not going to reflect the latest versions of the mentioned frameworks and should be taken with healthy skepticism. But you should be doing that with most information on the internet anyway right?
 
-## In the Beginning, There was Hypertext
+## A Walk Down Memory Lane
 
 This website first started as most websites did back in the early days of the web: pure HTML, CSS, and a sprinkle of JS.
 
@@ -55,11 +55,73 @@ However, starting the blog became an impetus for considering a different solutio
 
 I was skeptical about migrating to [Next.js](https://nextjs.org) initially as I thought it was fairly heavy-handed like Angular would be but with React flavoring. But the option to be flexible between [server-side rendering (SSR)](https://nextjs.org/docs/pages/building-your-application/rendering/server-side-rendering) or [static site generation (SSG)](https://nextjs.org/docs/pages/building-your-application/rendering/static-site-generation) was really appealing for my use case. Plus there were ways to improve blog writing by using [MDX] plugins; this system was a pain to configure until I realized I was missing [Tailwind Typography](https://github.com/tailwindlabs/tailwindcss-typography) to merge with the Tailwind styling I've been using prior.
 
+A quick overview of what SSR/SSG is for those who don't want to click the reference links, it's a different paradigm for web applications on how the server and client interact. Here is a rough flow diagram made by yours truly explaining the difference:
+
+```
+   Client-Side Rendering Model
+                                                                  ┌─────────────────┐
+                                                                  │                 │
+                                                                  │ Server gives    │
+                                                                ┌►│ styles.css      ├──┐                 Loops as long as user is in page
+                                                                │ │                 │  │         ┌──────────────────────────────────────────────────────────────┐
+                                           ┌──────────────────┐ │ └─────────────────┘  │         │                                                              │
+┌──────────────┐      ┌──────────────┐     │                  ├─┘                      │         ▼                                                              │
+│              │      │              │     │ Client parses    │   ┌─────────────────┐  │ ┌─────────────────┐   ┌─────────────┐   ┌────────────────────┐  ┌──────┴───────┐
+│ Client wants ├─────►│ Server gives ├────►│ page -           │   │                 │  └►│                 │   │             ├──►│                    │  │              │
+│ /page        │      │ page.html    │     │ requests linked  ├──►│ Server gives    ├───►│ Client Renders  ├──►│ Client Runs ├──►│ Server Responds    ├─►│ Client JS    │
+│              │      │              │     │ CSS/JS           │   │ bundle1.js      │    │ HTML            │   │ JS          ├──►│ to API requests    │  │ Alters Page  │
+└──────────────┘      └──────────────┘     │                  ├─┐ │                 │  ┌►│                 │   │             ├──►│                    │  │              │
+                                           └──────────────────┘ │ └─────────────────┘  │ └─────────────────┘   └─────────────┘   └────────────────────┘  └──────────────┘
+                                                                │                      │                                       │ HTTP API Calls
+                                                                │ ┌─────────────────┐  │                                       │
+                                                                │ │                 │  │                                    On Load
+                                                                └►│ Other Resources ├──┘                                 On Interaction
+                                                                  │                 │
+                                                                  └─────────────────┘
+
+ ────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
+ ────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
+
+
+   Server-Side Rendering Model                                                                                    Loops as long as user is in page
+                                                                        ┌─────────────────┐            ┌──────────────────────────────────────────────────────────────┐
+                                                                        │                 │            │                                                              │
+                                                                        │ Server gives    │            │                                 Doesn't Exist in Static      │
+                                                                      ┌►│ styles.css      ├──┐         │                                Site Generation (Usually)     │
+                                                                      │ │                 │  │         │                                         │                    │
+                      ┌───────────────────┐      ┌──────────────────┐ │ └─────────────────┘  │         │                                         │                    │
+┌──────────────┐      │                   │      │                  ├─┘                      │         ▼                                         │                    │
+│              │      │ Server generates  │      │ Client parses    │   ┌─────────────────┐  │ ┌─────────────────┐   ┌─────────────┐   ┌─────────┴──────────┐  ┌──────┴───────┐
+│ Client wants ├─────►│ HTML for page     │      │ page -           │   │                 │  └►│                 │   │             ├──►│                    │  │              │
+│ /page        │      │ then sends to     ├─────►│ requests linked  ├──►│ Server gives    ├───►│ Client Renders  ├──►│ Client Runs ├──►│ Server Responds    ├─►│ Client JS    │
+│              │      │ Client            │      │ CSS/JS           │   │ client.js       │    │ HTML            │   │ JS          ├──►│ to API requests    │  │ Alters Page  │
+└──────────────┘      │                   │      │                  ├─┐ │                 │  ┌►│                 │   │             ├──►│                    │  │              │
+                      └───────┬───────────┘      └──────────────────┘ │ └─────────────────┘  │ └─────────────────┘   └─────────────┘   └────────────────────┘  └──────────────┘
+                              │                                       │                      │                                       │ HTTP API Calls
+                              │                                       │ ┌─────────────────┐  │                                       │
+                              │                                       │ │                 │  │                                 On Interaction
+                              │                                       └►│ Other Resources ├──┘                                RARELY - On Load
+                              │                                         │                 │                       Since Server should have done this already
+                       Skipped in Static                                └─────────────────┘
+                        Site Generation
+```
+
+For understanding how webpages actually get processed (regardless of this model), [MDN has a great article explaining everything in greater detail ](https://developer.mozilla.org/en-US/docs/Web/Performance/How_browsers_work) and is great documentation to read when learning how to make faster websites.
+
+There are a couple of key differences (that are subtle in this representation to not be a gigantic flow diagram) that distinguish SSR from the more common "Client-Side Rendering" (CSR):
+
+1. When the Client requests the page, SSR has the server perform all the initial JavaScript for loading the page instead of the Client. So things like calling a REST API and scaffolding whatever table or DOM tree from the API response is done by the server before it ever reaches the client.
+    - This becomes more efficient when the data fetching operations or whatever API you use is integrated directly into the server that "serves" the HTML since it removes networking latency between endpoints
+2. The JavaScript bundle that is sent to the client when they request it during HTML parsing is significantly different internally; The bundle served by SSR is significantly smaller since it contains just the JavaScript needed to alter page display and call modification operations (i.e. HTTP `POST` requests)
+    - Aside from reducing network latency further with smaller transfer sizes, it also means less JavaScript processing time upfront. This is why there is a note noting that there is rarely "On Load" JavaScript executed under an SSR model since that work is already done by the server.
+3. SSG is very similar to SSR except there is _usually_ no preprocessing from the server and no API requests from the client, hence the _static_ in the acronym. Resources are generated at compile-time and simply sent by the server under this model.
+    - The diagram points to which stages are generally ignored under an SSG model.
+
 Because Next.js uses SSR as the basis for its framework, it meant having to worry about [React Server Components](https://react.dev/reference/rsc/server-components). These are really cool because depending on how you choose to bundle/deploy your project the result of compilation differs; static data can be "pre-rendered" into the resulting bundle (which requires only minimum client-side JS for interactivity) while dynamic data can be rendered after fetching on the server and just give the client the rendering work. Given that all the resources of this site are available by compile-time, this means _significantly slimmer bundles and faster rendering_ while still preserving the design and feel of the site. I am actually glad that I made this transition despite all the hair-pulling I did.
 
 //Insert commit history bit here
 
-## The issues with the older versions
+## The Improvements?
 
 First, I want to clarify that _these are not bad frameworks, just they don't work well for this kind of "effectively static" website_. All I really pay for is a domain from Cloudflare, and host using their [Pages](https://pages.cloudflare.com/) (at the free tier); There isn't any login middleware, CRM, backend database, nothing. Just statically hosted HTML, CSS, and JS.
 
@@ -67,6 +129,80 @@ First, I want to clarify that _these are not bad frameworks, just they don't wor
 > This website's hosting method changed over the years. First it was GitHub Pages, then I purchased a domain from Google Domains (now defunct and run by SquareSpace) and used that system. Then I started to use [Firebase](https://firebase.google.com) for hosting until I moved my domain to Cloudflare and set up the Cloudflare Pages project.
 >
 > A brief explanation of the reasoning is that while every service I used was free (except the domain registration obviously) GitHub Pages and Firebase Hosting is somewhat restrictive in their functionality. With Cloudflare, I'm able to handle how my site is hosted at a much deeper level and get stronger analytical insights into request usages. Plus there are other benefits like [Rules](https://developers.cloudflare.com/rules/) which can help with blocking annoying bots that try to scrape the site for vulnerabilities (this is more of an analytics issue).
+
+For this analysis, I will ignore the pure HTML and Angular versions of the site since they have other problems that make it an unequal comparison (for example, the Angular version has no code-splitting). Using the SSR/SSG vs CSR explanation from the previous section, here are a few areas that the migration from pure React to Next.js showed improvements in:
+
+- HTML/CSS/JS File Sizes
+- First Load JS Size
+- Page Loading Time
+
+
+These are all related metrics but for different parts of the web page loading process from start to end. First, the reduced size of the HTML, CSS and JS provide a decrease in transfer time overall, and smaller JS by extension means less code that needs to be run on first load.
+
+
+The React version of this site is not much better. Because I used [Vite](https://vite.dev/) instead of [webpack](https://webpack.js.org/) the results look different but provide the same information.
+
+```
+vite v5.4.6 building for production...
+✓ 3422 modules transformed.
+dist/index.html                                 0.52 kB │ gzip:  0.35 kB
+dist/assets/Picture1.webp                       5.21 kB
+<... a bunch of images ...>
+dist/assets/err_5.webp                          5.67 kB
+dist/assets/hero.webp                         462.21 kB
+dist/assets/index.css                          27.48 kB │ gzip:  6.02 kB
+dist/assets/arrow-left-wd6aoGpn.js              0.33 kB │ gzip:  0.26 kB
+dist/assets/index-Dsn0k6dh.js                   0.41 kB │ gzip:  0.29 kB
+dist/assets/err_9-CMtuSuMJ.js                   0.58 kB │ gzip:  0.21 kB
+dist/assets/badge-5ai2lK9d.js                   0.71 kB │ gzip:  0.37 kB
+dist/assets/blog_list-C1rE-FtA.js               0.91 kB │ gzip:  0.49 kB
+dist/assets/Blog-BKOfLdQ0.js                    1.00 kB │ gzip:  0.54 kB
+dist/assets/Error404-CJ55vSE8.js                1.67 kB │ gzip:  0.70 kB
+dist/assets/About-DfBpW-C4.js                   2.51 kB │ gzip:  1.25 kB
+dist/assets/Projects-CaBAu5Yl.js                7.76 kB │ gzip:  4.35 kB
+dist/assets/BlogPage-D7PpiPg1.js                7.84 kB │ gzip:  3.84 kB
+dist/assets/xv6-BmNTcSDr.js                    15.30 kB │ gzip:  6.89 kB
+dist/assets/Resume-Bscw4k5W.js                 15.82 kB │ gzip:  5.82 kB
+dist/assets/Home-DkVT_end.js                   79.40 kB │ gzip: 32.98 kB
+dist/assets/proxy-C197JKuH.js                 110.38 kB │ gzip: 36.15 kB
+dist/assets/MarkdownRender-jXc2DL1j.js        236.53 kB │ gzip: 75.11 kB
+dist/assets/index-CCNu7cRr.js                 251.26 kB │ gzip: 83.46 kB
+✓ built in 6.70s
+
+```
+
+```
+Route (app)                              Size     First Load JS
+┌ ○ /                                    27.6 kB         150 kB
+├ ○ /_not-found                          137 B           106 kB
+├ ○ /about                               551 B           111 kB
+├ ○ /blog                                6.54 kB         128 kB
+├ ○ /blog/0001                           878 B           114 kB
+├ ○ /blog/0002                           5.6 kB          124 kB
+├ ○ /blog/0003                           1.46 kB         120 kB
+├ ○ /blog/0004                           1.64 kB         120 kB
+├ ○ /blog/0005                           894 B           119 kB
+├ ○ /projects                            3.24 kB         121 kB
+└ ○ /resume                              5.3 kB          118 kB
++ First Load JS shared by all            105 kB
+  ├ chunks/4bd1b696-932c6735a295a20d.js  52.9 kB
+  ├ chunks/517-e3663d5a07510414.js       50.5 kB
+  └ other shared chunks (total)          1.98 kB
+```
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
@@ -100,35 +236,5 @@ runtime.332e9e9b7bbd6596.js   | runtime       |   1.04 kB |               599 by
 Warning: bundle initial exceeded maximum budget. Budget 500.00 kB was not met by 401.42 kB with a total of 901.42 kB.
 ```
 
-The React version of this site is not much better. Because I used [Vite](https://vite.dev/) instead of [webpack](https://webpack.js.org/) the results look different but provide the same information.
-
-```
-vite v5.4.6 building for production...
-✓ 3422 modules transformed.
-dist/index.html                                 0.52 kB │ gzip:  0.35 kB
-dist/assets/Picture1.webp                       5.21 kB
-<... a bunch of images ...>
-dist/assets/err_5.webp                          5.67 kB
-dist/assets/hero.webp                         462.21 kB
-dist/assets/index.css                          27.48 kB │ gzip:  6.02 kB
-dist/assets/arrow-left-wd6aoGpn.js              0.33 kB │ gzip:  0.26 kB
-dist/assets/index-Dsn0k6dh.js                   0.41 kB │ gzip:  0.29 kB
-dist/assets/err_9-CMtuSuMJ.js                   0.58 kB │ gzip:  0.21 kB
-dist/assets/badge-5ai2lK9d.js                   0.71 kB │ gzip:  0.37 kB
-dist/assets/blog_list-C1rE-FtA.js               0.91 kB │ gzip:  0.49 kB
-dist/assets/Blog-BKOfLdQ0.js                    1.00 kB │ gzip:  0.54 kB
-dist/assets/Error404-CJ55vSE8.js                1.67 kB │ gzip:  0.70 kB
-dist/assets/About-DfBpW-C4.js                   2.51 kB │ gzip:  1.25 kB
-dist/assets/Projects-CaBAu5Yl.js                7.76 kB │ gzip:  4.35 kB
-dist/assets/BlogPage-D7PpiPg1.js                7.84 kB │ gzip:  3.84 kB
-dist/assets/xv6-BmNTcSDr.js                    15.30 kB │ gzip:  6.89 kB
-dist/assets/Resume-Bscw4k5W.js                 15.82 kB │ gzip:  5.82 kB
-dist/assets/Home-DkVT_end.js                   79.40 kB │ gzip: 32.98 kB
-dist/assets/proxy-C197JKuH.js                 110.38 kB │ gzip: 36.15 kB
-dist/assets/MarkdownRender-jXc2DL1j.js        236.53 kB │ gzip: 75.11 kB
-dist/assets/index-CCNu7cRr.js                 251.26 kB │ gzip: 83.46 kB
-✓ built in 6.70s
-
-```
 
 This is a lot of data for a very lightweight site. Sure, it contains all the data for every page on the site and all of JS needed to supply the interactivity but the metrics and the warning indicate otherwise. The first interesting metric is the difference between the _Raw Size_ and _Estimated Transfer Size_. While modern servers and browsers have [compression for HTTP requests/responses](https://developer.mozilla.org/en-US/docs/Web/HTTP/Compression) with nominal overhead, the disparity in the reduced transfer size indicates that _there is a lot of duplicate code and data being transferred_. It also implies that there could be a lot less JavaScript being run on the clients but the [transpilation](https://stackoverflow.com/questions/48414941/what-is-transpiler-and-what-is-exactly-work-of-transpiler) process couldn't optimize it that well.
